# KEVSight

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
kevsight/: conf_sample.py  config.py  main.py
