[tool.poetry]
name = "kevsight"
version = "0.1.1"
description = "A client to generate sightings for Vulnerability-Lookup from the Known Exploited Vulnerabilities (KEV) catalog."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"

homepage = "https://github.com/cedricbonhomme/KEVSight"
repository = "https://github.com/cedricbonhomme/KEVSight"

keywords = ["Vulnerability-Lookup", "Vulnerability", "CVE", "KEV", "PyVulnerabilityLookup"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

include = [
    "README.md",
    "COPYING",
    "kevsight/conf_sample.py",
]

[tool.poetry.scripts]
KEVSight = "kevsight.main:main"

[tool.poetry.dependencies]
python = "^3.10"
cisa-kev = "^2.0.2"
pyvulnerabilitylookup = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs|fedivuln.egg-info"

[tool.isort]
profile = "black"
