[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "KEVSight"
version = "0.1.1"
description = "A client to generate sightings for Vulnerability-Lookup from the Known Exploited Vulnerabilities (KEV) catalog."
authors = [
    {name = "Cédric Bonhomme", email = "cedric.bonhomme@circl.lu"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["Vulnerability-Lookup", "Vulnerability", "CVE", "CISA", "KEV"]
# classifieres is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]

requires-python = "^3.10"
dependencies = [
    "pyvulnerabilitylookup (>=2.2.0)",
    "cisa-kev (>=2.0.2)"
]

[project.urls]
homepage = "https://github.com/vulnerability-lookup/KEVSight"
repository = "https://github.com/vulnerability-lookup/KEVSight"


[project.scripts]
KEVSight = "kevsight.main:main"


[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
include = [
    "README.md",
    "COPYING",
    "kevsight/conf_sample.py",
]


[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs"

[tool.isort]
profile = "black"
